--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/Emulation.storyboard
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/Emulation.storyboard
@@ -38,6 +38,7 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="R1C-TK-7Br" firstAttribute="trailing" secondItem="Dzs-Je-a4O" secondAttribute="trailing" id="0xC-pF-goy"/>
                             <constraint firstItem="daX-vt-kk3" firstAttribute="trailing" secondItem="Dzs-Je-a4O" secondAttribute="trailing" id="2ZY-HW-vdV"/>
@@ -61,6 +62,9 @@
                             <constraint firstItem="daX-vt-kk3" firstAttribute="leading" secondItem="Dzs-Je-a4O" secondAttribute="leading" id="scI-dh-7aD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Dzs-Je-a4O"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="k9B-W2-NA3" appends="YES" id="VT2-Zk-rhf"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Dolphin" id="FkZ-jT-nNo">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="ic_settings_core" id="8NK-If-SQF">
@@ -82,6 +86,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F1Y-yU-GqA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="BG8-Lj-EOf" userLabel="Exit" sceneMemberID="exit"/>
+                <screenEdgePanGestureRecognizer cancelsTouchesInView="NO" minimumNumberOfTouches="1" id="k9B-W2-NA3">
+                    <rectEdge key="edges" top="YES"/>
+                    <connections>
+                        <action selector="topEdgeRecognized:" destination="72Z-je-Eys" id="rT9-Gf-OME"/>
+                    </connections>
+                </screenEdgePanGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1039.1304347826087" y="56.919642857142854"/>
         </scene>
